--- a/part1/todo_app/manifests/service.yaml
+++ b/part1/todo_app/manifests/service.yaml
@@ -3,12 +3,9 @@ kind: Service
 metadata:
   name: todo-app-svc
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: todo-app
   ports:
-    - name: http
-      nodePort: 30080
-      protocol: TCP
-      port: 80 
-      targetPort: 5000
+    - port: 80 # Internal port that is exposed
+      targetPort: 5000 # Port flask listens to
