--- a/part1/pingpong/manifests/deployment.yaml
+++ b/part1/pingpong/manifests/deployment.yaml
@@ -2,8 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ping-pong
-  labels:
-    app: ping-pong
 spec:
   replicas: 1
   selector:
@@ -14,8 +12,15 @@ spec:
       labels:
         app: ping-pong
     spec:
+      volumes:
+        - name: shared-data
+          persistentVolumeClaim:
+            claimName: shared-pvc
       containers:
       - name: ping-pong
-        image: macrichard/ping-pong:1.2
+        image: macrichard/ping-pong:2.0
+        volumeMounts:
+        - name: shared-data
+          mountPath: /shared
         ports:
         - containerPort: 5000
