--- a/part1/log_output/manifests/log-output-deployment.yaml
+++ b/part1/log_output/manifests/log-output-deployment.yaml
@@ -19,12 +19,12 @@ spec:
         emptyDir: {}
       containers:
       - name: writer
-        image: <your-dockerhub-username>/log-output-writer:1.0
+        image: macrichard/log-output-writer:1.0
         volumeMounts:
         - name: shared-data
           mountPath: /shared
       - name: reader
-        image: <your-dockerhub-username>/log-output-reader:1.0
+        image: macrichard/log-output-reader:1.0
         volumeMounts:
         - name: shared-data
           mountPath: /shared
