--- a/part2/log_output/manifests/ingress.yaml
+++ b/part2/log_output/manifests/ingress.yaml
@@ -2,6 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: shared-ingress
+  namespace: appnamespace
+
   annotations:
     kubernetes.io/ingress.className: traefik
 spec:
