--- a/part2/log_output/manifests/service.yaml
+++ b/part2/log_output/manifests/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: log-output-svc
+  namespace: appnamespace
+
 spec:
   selector:
     app: log-output
