--- a/part2/todo_app/manifests/ingress.yaml
+++ b/part2/todo_app/manifests/ingress.yaml
@@ -2,9 +2,10 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: project-ingress
+  namespace: project  
   annotations:
-    kubernetes.io/ingress.class: traefik
 spec:
+  ingressClassName: traefik
   rules:
   - http:
       paths:
