--- a/part2/todo_backend/manifests/service.yaml
+++ b/part2/todo_backend/manifests/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: todo-backend-svc
+  namespace: project
+
 spec:
   selector:
     app: todo-backend
