--- a/part2/log_output/manifests/deployment.yaml
+++ b/part2/log_output/manifests/deployment.yaml
@@ -15,6 +15,19 @@ spec:
     spec:
       containers:
       - name: log-output
-        image: macrichard/log-output:3.1
+        image: macrichard/log-output:4.0
         ports:
         - containerPort: 5000
+        env:
+        - name: MESSAGE
+          valueFrom:
+            configMapKeyRef:
+              name: log-output-config
+              key: MESSAGE
+        volumeMounts:
+          - name: config-volume
+            mountPath: /config
+      volumes:
+      - name: config-volume
+        configMap:
+          name: log-output-config
