--- a/part2/log_output/Dockerfile
+++ b/part2/log_output/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.10-slim
+FROM python:3.10
 
 WORKDIR /app
 
@@ -6,7 +6,7 @@ COPY . /app
 
 RUN pip install flask
 RUN pip install requests
-
+RUN pip install psycopg2
 
 
 CMD ["python", "log_output.py"]
