--- a/part2/log_output/manifests/ingress.yaml
+++ b/part2/log_output/manifests/ingress.yaml
@@ -3,24 +3,30 @@ kind: Ingress
 metadata:
   name: shared-ingress
   namespace: appnamespace
-
   annotations:
     kubernetes.io/ingress.className: traefik
 spec:
   rules:
   - http:
       paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: log-output-svc
-            port:
-              number: 80
       - path: /pingpong
         pathType: Prefix
         backend:
           service:
             name: ping-pong-svc
+            port:
+              number: 5000
+      - path: /count
+        pathType: Prefix
+        backend:
+          service:
+            name: ping-pong-svc
+            port:
+              number: 5000
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: log-output-svc
             port:
               number: 80
