--- a/part2/pingpong/Dockerfile
+++ b/part2/pingpong/Dockerfile
@@ -1,5 +1,7 @@
-FROM python:3.10-slim
+FROM python
 WORKDIR /app
 COPY . /app
 RUN pip install flask
+RUN pip install requests
+RUN pip install psycopg2
 CMD ["python", "ping_pong.py"]
