--- a/part2/todo_backend/manifests/deployment.yaml
+++ b/part2/todo_backend/manifests/deployment.yaml
@@ -15,6 +15,12 @@ spec:
     spec:
       containers:
       - name: todo-backend
-        image: macrichard/todo-backend:1.0
+        image: macrichard/todo-backend:3.0
         ports:
         - containerPort: 5000
+        env:
+        - name: DATABASE_URL
+          value: "postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@postgres-svc:5432/$(POSTGRES_DB)"
+        envFrom:
+        - secretRef:
+            name: todo-db-credentials
