--- a/part3/pingpong/Dockerfile
+++ b/part3/pingpong/Dockerfile
@@ -1,7 +1,10 @@
-FROM python
+FROM --platform=linux/amd64 python:3.9 as build
 WORKDIR /app
 COPY . /app
-RUN pip install flask
-RUN pip install requests
-RUN pip install psycopg2
+RUN apt-get update && apt-get install -y \
+    libpq-dev gcc && \
+    rm -rf /var/lib/apt/lists/*
+
+RUN pip install --no-cache-dir flask requests psycopg2 requests
+
 CMD ["python", "ping_pong.py"]
