--- a/part3/log_output/g_manifests/service.yaml
+++ b/part3/log_output/g_manifests/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ping-pong-svc
+  name: log-output-svc
   namespace: default
 spec:
   type: NodePort
   selector:
-    app: ping-pong
+    app: log-output
   ports:
     - port: 5000
       protocol: TCP
-      targetPort: 5000 
+      targetPort: 5000
