Ex 3.09 beware the order

--- a/part3/log_output/g_manifests/deployment.yaml
+++ b/part3/log_output/g_manifests/deployment.yaml
@@ -31,6 +31,13 @@ spec:
         volumeMounts:
         - name: config-volume
           mountPath: /config
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "100m"
+          limits:
+            memory: "256Mi"
+            cpu: "500m"
       volumes:
       - name: config-volume
         configMap:
