--- a/part3/pingpong/g_manifests/deployment.yaml
+++ b/part3/pingpong/g_manifests/deployment.yaml
@@ -38,3 +38,10 @@ spec:
               key: database
         - name: DATABASE_HOST
           value: postgres-svc 
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "50m"
+          limits:
+            memory: "128Mi"
+            cpu: "250m"
