Change project structure

--- a/part3/todo/manifests/backend-db-statefulset.yaml
+++ b/part3/todo/manifests/backend-db-statefulset.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: postgres-db
     spec:
+      terminationGracePeriodSeconds: 30
       containers:
       - name: postgres
         image: postgres:13
