--- a/part3/todo/manifests/backend-deployment.yaml
+++ b/part3/todo/manifests/backend-deployment.yaml
@@ -24,3 +24,9 @@ spec:
         envFrom:
         - secretRef:
             name: todo-db-credentials
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 5000
+          initialDelaySeconds: 5
+          periodSeconds: 10
