--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -55,13 +55,13 @@ jobs:
 
       - name: Build and Push Todo Backend Image
         run: |-
-          docker build --platform=linux/amd64 -t gcr.io/${{ env.PROJECT_ID }}/todo-backend:latest ./part3/todo/todo_backend
-          docker push gcr.io/${{ env.PROJECT_ID }}/todo-backend:latest
+          docker build --platform=linux/amd64 -t gcr.io/${{ env.PROJECT_ID }}/todo-backend:10.0 ./part3/todo/todo_backend
+          docker push gcr.io/${{ env.PROJECT_ID }}/todo-backend:10.0
 
       - name: Build and Push Todo App Image
         run: |-
-          docker build --platform=linux/amd64 -t gcr.io/${{ env.PROJECT_ID }}/todo-app:latest ./part3/todo/todo_app
-          docker push gcr.io/${{ env.PROJECT_ID }}/todo-app:latest
+          docker build --platform=linux/amd64 -t gcr.io/${{ env.PROJECT_ID }}/todo-app:10.0 ./part3/todo/todo_app
+          docker push gcr.io/${{ env.PROJECT_ID }}/todo-app:10.0
 
       - name: Set up Kustomize
         uses: imranismail/setup-kustomize@v2.1.0
@@ -69,8 +69,8 @@ jobs:
       - name: Deploy part3 with Kustomize
         run: |-
           cd ./part3/todo
-          kustomize edit set image gcr.io/${{ env.PROJECT_ID }}/todo-backend:latest
-          kustomize edit set image gcr.io/${{ env.PROJECT_ID }}/todo-app:latest
+          kustomize edit set image gcr.io/${{ env.PROJECT_ID }}/todo-backend:10.0
+          kustomize edit set image gcr.io/${{ env.PROJECT_ID }}/todo-app:10.0
           kustomize build . | kubectl apply -f -
           kubectl rollout status deployment/todo-backend -n project
           kubectl rollout status deployment/todo-app -n project
