--- a/part3/todo/kustomization.yaml
+++ b/part3/todo/kustomization.yaml
@@ -9,8 +9,10 @@ resources:
   - manifests/pvc.yaml
   - manifests/backend-db-service.yaml
   - manifests/backend-db-statefulset.yaml
-images:
+mages:
   - name: PROJECT/IMAGE
-    newName: gcr.io/YOUR_PROJECT_ID/todo-backend
+    newName: gcr.io/${PROJECT_ID}/todo-backend
+    newTag: latest
   - name: PROJECT/IMAGE
-    newName: gcr.io/YOUR_PROJECT_ID/todo-app
+    newName: gcr.io/${PROJECT_ID}/todo-app
+    newTag: latest
