--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,6 +10,8 @@ env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
   GKE_CLUSTER: dwk-cluster
   GKE_ZONE: europe-north1-b
+  IMAGEBACKEND: todo-backend
+  IMAGEFRONT: todo-app
 
 jobs:
   build-publish-deploy:
@@ -39,27 +41,15 @@ jobs:
           location: ${{ env.GKE_ZONE }}
           project_id: ${{ env.PROJECT_ID }}
 
-      - name: Build and Push Log Output Image
-        run: |-
-          docker build --platform=linux/amd64 -t gcr.io/${{ env.PROJECT_ID }}/log-output:${{ github.ref_name }}-${{ github.sha }} ./part3/log_output
-          docker push gcr.io/${{ env.PROJECT_ID }}/log-output:${{ github.ref_name }}-${{ github.sha }}
-
-      - name: Build and Push PingPong Image
-        run: |-
-          docker build --platform=linux/amd64 -t gcr.io/${{ env.PROJECT_ID }}/pingpong:${{ github.ref_name }}-${{ github.sha }} ./part3/pingpong
-          docker push gcr.io/${{ env.PROJECT_ID }}/pingpong:${{ github.ref_name }}-${{ github.sha }}
-
       - name: Build and Push Todo Backend Image
         run: |-
-          docker build --platform=linux/amd64 -t gcr.io/${{ env.PROJECT_ID }}/todo-backend:${{ github.ref_name }}-${{ github.sha }} ./part3/todo/todo_backend
-          docker push gcr.io/${{ env.PROJECT_ID }}/todo-backend:${{ github.ref_name }}-${{ github.sha }}
-
+          docker build --platform=linux/amd64 --t "gcr.io/$PROJECT_ID/$IMAGEBACKEND:$BRANCH-$GITHUB_SHA" ./part3/todo/todo_backend
+          docker push "gcr.io/$PROJECT_ID/$IMAGEBACKEND:$BRANCH-$GITHUB_SHA"
 
       - name: Build and Push Todo App Image
         run: |-
-          docker build --platform=linux/amd64 -t gcr.io/${{ env.PROJECT_ID }}/todo-app:${{ github.ref_name }}-${{ github.sha }} ./part3/todo/todo_app
-          docker push gcr.io/${{ env.PROJECT_ID }}/todo-app:${{ github.ref_name }}-${{ github.sha }}
-
+          docker build --platform=linux/amd64 --t "gcr.io/$PROJECT_ID/$IMAGEFRONT:$BRANCH-$GITHUB_SHA" ./part3/todo/todo-app
+          docker push "gcr.io/$PROJECT_ID/$IMAGEFRONT:$BRANCH-$GITHUB_SHA"
 
       - name: Set up Kustomize
         uses: imranismail/setup-kustomize@v2.1.0
@@ -67,9 +57,11 @@ jobs:
       - name: Deploy
         run: |-
           cd ./part3/todo
-          kustomize edit set image PROJECT/IMAGE=gcr.io/${{ secrets.GKE_PROJECT }}/todo-backend:latest
-          kustomize edit set image PROJECT/IMAGE=gcr.io/${{ secrets.GKE_PROJECT }}/todo-app:latest
+          cd todo-app && kustomize edit set image PROJECT/IMAGEBACK=gcr.io/$PROJECT_ID/$IMAGEBACKEND:$BRANCH-$GITHUB_SHA
+          cd ..
+          cd todo-backend && kustomize edit set image PROJECT/IMAGEFRONT=gcr.io/$PROJECT_ID/$IMAGEFRONT:$BRANCH-$GITHUB_SHA
+          cd ..
           kustomize build . | kubectl apply -f -
-          kubectl rollout status deployment/todo-backend -n project
-          kubectl rollout status deployment/todo-app -n project
+          kubectl rollout status deployment/$IMAGEBACKEND -n project
+          kubectl rollout status deployment/$IMAGEFRONT -n project
 
