--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,6 +12,7 @@ env:
   GKE_ZONE: europe-north1-b
   IMAGEBACKEND: todo-backend
   IMAGEFRONT: todo-app
+  BRANCH: ${{ github.ref_name }}
 
 jobs:
   build-publish-deploy:
