--- a/part3/todo/manifests/backend-db-service.yaml
+++ b/part3/todo/manifests/backend-db-service.yaml
@@ -4,9 +4,11 @@ metadata:
   name: postgres-svc
   namespace: project
 spec:
-  ports:
-  - port: 5432
-    targetPort: 5432
-  clusterIP: None
   selector:
-    app: postgres-db
+    app: postgres
+  ports:
+    - port: 5432
+      targetPort: 5432
+      protocol: TCP
+      name: postgres
+  type: ClusterIP
