--- a/part3/todo/manifests/backend-db-statefulset.yaml
+++ b/part3/todo/manifests/backend-db-statefulset.yaml
@@ -6,6 +6,8 @@ metadata:
 spec:
   serviceName: postgres-svc
   replicas: 1
+  updateStrategy:
+    type: OnDelete 
   selector:
     matchLabels:
       app: postgres-db
@@ -20,9 +22,6 @@ spec:
         image: postgres:13
         ports:
         - containerPort: 5432
-        volumeMounts:
-        - name: postgres-data
-          mountPath: /var/lib/postgresql/data
         env:
         - name: POSTGRES_USER
           valueFrom:
@@ -39,11 +38,17 @@ spec:
             secretKeyRef:
               name: todo-db-credentials
               key: POSTGRES_DB
+        - name: PGDATA
+          value: /var/lib/postgresql/data/pgdata
+        volumeMounts:
+        - name: postgres-data
+          mountPath: /var/lib/postgresql/data
   volumeClaimTemplates:
   - metadata:
       name: postgres-data
     spec:
-      accessModes: ["ReadWriteOnce"]
+      accessModes: 
+        - ReadWriteOnce
       resources:
         requests:
           storage: 1Gi
