--- a/part3/todo/manifests/backend-db-service.yaml
+++ b/part3/todo/manifests/backend-db-service.yaml
@@ -4,11 +4,11 @@ metadata:
   name: postgres-svc
   namespace: project
 spec:
-  selector:
-    app: postgres
+  type: ClusterIP
   ports:
     - port: 5432
       targetPort: 5432
       protocol: TCP
       name: postgres
-  type: ClusterIP
+  selector:
+    app: postgres-db
