--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -73,9 +73,33 @@ jobs:
 
       - name: Deploy
         run: |-
-          cd ./part3/todo
-          kustomize edit set image PROJECT/IMAGEBACK=gcr.io/$PROJECT_ID/$IMAGEBACKEND:$BRANCH-$GITHUB_SHA
-          kustomize edit set image PROJECT/IMAGEFRONT=gcr.io/$PROJECT_ID/$IMAGEFRONT:$BRANCH-$GITHUB_SHA
+          # Strip "refs/heads/" to get the actual branch name
+          BRANCH_NAME=${GITHUB_REF#refs/heads/}
+
+          # Decide which namespace to use
+          if [ "$BRANCH_NAME" = "main" ]; then
+            NAMESPACE="default"
+            echo "Deploying main branch to the default namespace."
+          else
+            NAMESPACE="$BRANCH_NAME"
+            echo "Deploying branch '$BRANCH_NAME' to its own namespace: $NAMESPACE"
+            kubectl create namespace "$NAMESPACE" || true
+          fi
+
+          # Switch kubectl context to our chosen namespace
+          kubectl config set-context --current --namespace="$NAMESPACE"
+
+          # Ensure Kustomize is also set to the correct namespace
+          kustomize edit set namespace "$NAMESPACE"
+
+          # Update the container image name in Kustomize
+          kustomize edit set image PROJECT/IMAGE="gcr.io/$PROJECT_ID/$IMAGE:${BRANCH_NAME}-$GITHUB_SHA"
+
+          # Apply the manifests (deployment, service, etc.)
           kustomize build . | kubectl apply -f -
-          kubectl rollout status deployment/$IMAGEBACKEND -n project
-          kubectl rollout status deployment/$IMAGEFRONT -n project
+
+          # Wait for the rollout to succeed
+          kubectl rollout status deployment "$DEPLOYMENT"
+
+          # List out services (debug)
+          kubectl get services -o wide
