--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -76,6 +76,8 @@ jobs:
           cd ./part3/todo
           # Strip "refs/heads/" to get the actual branch name
           BRANCH_NAME=${GITHUB_REF#refs/heads/}
+          kustomize edit set image PROJECT/IMAGEBACK=gcr.io/$PROJECT_ID/$IMAGEBACKEND:$BRANCH-$GITHUB_SHA
+          kustomize edit set image PROJECT/IMAGEFRONT=gcr.io/$PROJECT_ID/$IMAGEFRONT:$BRANCH-$GITHUB_SHA
 
           # Decide which namespace to use
           if [ "$BRANCH_NAME" = "main" ]; then
@@ -92,9 +94,6 @@ jobs:
 
           # Ensure Kustomize is also set to the correct namespace
           kustomize edit set namespace "$NAMESPACE"
-
-          # Update the container image name in Kustomize
-          kustomize edit set image PROJECT/IMAGE="gcr.io/$PROJECT_ID/$IMAGE:${BRANCH_NAME}-$GITHUB_SHA"
 
           kustomize build . | kubectl apply -f -
 
