--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -59,10 +59,8 @@ jobs:
       - name: Set up Kustomize
         uses: imranismail/setup-kustomize@v2.1.0
 
-      - name: Install SOPS
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y sops
+      - name: Setup SOPS
+        uses: nhedger/setup-sops@v2
 
       - name: Decrypt Secrets
         run: |
