--- a/part3/todo/manifests/front-service.yaml
+++ b/part3/todo/manifests/front-service.yaml
@@ -4,6 +4,9 @@ metadata:
   name: todo-app-svc
   namespace: project
 spec:
+  replicas: 1
+  updateStrategy:
+    type: OnDelete
   type: ClusterIP
   selector:
     app: todo-app
