--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,10 +16,7 @@ env:
 
 jobs:
   build-publish-deploy:
-    name: Build, Publish, and Deploy part3 to GKE
     runs-on: ubuntu-latest
-    environment: default
-
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -43,14 +40,14 @@ jobs:
           project_id: ${{ env.PROJECT_ID }}
 
       - name: Build and Push Todo Backend Image
-        run: |-
+        run: |
           docker build --platform=linux/amd64 \
             --tag "gcr.io/$PROJECT_ID/$IMAGEBACKEND:$BRANCH-$GITHUB_SHA" \
             ./part3/todo/todo_backend
           docker push "gcr.io/$PROJECT_ID/$IMAGEBACKEND:$BRANCH-$GITHUB_SHA"
 
       - name: Build and Push Todo App Image
-        run: |-
+        run: |
           docker build --platform=linux/amd64 \
             --tag "gcr.io/$PROJECT_ID/$IMAGEFRONT:$BRANCH-$GITHUB_SHA" \
             ./part3/todo/todo_app
@@ -59,46 +56,36 @@ jobs:
       - name: Set up Kustomize
         uses: imranismail/setup-kustomize@v2.1.0
 
-      - name: Setup SOPS
+      - name: Set up SOPS
         uses: nhedger/setup-sops@v2
 
-      - name: Decrypt Secrets
+      - name: Decrypt and Apply Secret
         run: |
-          # EXAMPLE: if your encrypted file is "secret.enc.yaml" in part3/todo/manifests
+          BRANCH_NAME=${GITHUB_REF#refs/heads/}
+          if [ "$BRANCH_NAME" = "main" ]; then
+            NAMESPACE="default"
+          else
+            NAMESPACE="$BRANCH_NAME"
+            kubectl create namespace "$NAMESPACE" || true
+          fi
+          kubectl config set-context --current --namespace="$NAMESPACE"
           sops --decrypt part3/todo/manifests/secret.enc.yaml > part3/todo/manifests/secret.yaml
-
-          # Then apply it to the cluster:
           kubectl apply -f part3/todo/manifests/secret.yaml
 
       - name: Deploy
-        run: |-
+        run: |
           cd ./part3/todo
-          # Strip "refs/heads/" to get the actual branch name
           BRANCH_NAME=${GITHUB_REF#refs/heads/}
           kustomize edit set image PROJECT/IMAGEBACK=gcr.io/$PROJECT_ID/$IMAGEBACKEND:$BRANCH-$GITHUB_SHA
           kustomize edit set image PROJECT/IMAGEFRONT=gcr.io/$PROJECT_ID/$IMAGEFRONT:$BRANCH-$GITHUB_SHA
-
-          # Decide which namespace to use
           if [ "$BRANCH_NAME" = "main" ]; then
             NAMESPACE="default"
-            echo "Deploying main branch to the default namespace."
           else
             NAMESPACE="$BRANCH_NAME"
-            echo "Deploying branch '$BRANCH_NAME' to its own namespace: $NAMESPACE"
-            kubectl create namespace "$NAMESPACE" || true
           fi
-
-          # Switch kubectl context to our chosen namespace
           kubectl config set-context --current --namespace="$NAMESPACE"
-
-          # Ensure Kustomize is also set to the correct namespace
           kustomize edit set namespace "$NAMESPACE"
-
           kustomize build . | kubectl apply -f -
-
-          # Wait for the rollout to succeed
           kubectl rollout status deployment/$IMAGEBACKEND -n project
           kubectl rollout status deployment/$IMAGEFRONT -n project
-
-          # List out services (debug)
           kubectl get services -o wide
