--- a/part3/todo/manifests/secret.enc.yaml
+++ b/part3/todo/manifests/secret.enc.yaml
@@ -1,26 +1,27 @@
-apiVersion: ENC[AES256_GCM,data:INo=,iv:2J/xcIkpxvg+UWDzPEF7yByXkkKCkQAvh4J22mhGPhA=,tag:op+FnRQK4M3SEIg+CHZj8g==,type:str]
-kind: ENC[AES256_GCM,data:qCG1n0ao,iv:0le0CdXZLN1Wi5ieL+XgNkpKB10dpZfIUN95iIMUk70=,tag:dJR5OsX22M8SrPZ2wAc6AQ==,type:str]
+apiVersion: ENC[AES256_GCM,data:dkM=,iv:gCIJ+1DOz9EIJPP2yTPVFwyhYHLH85J1/hu1eZK6H4U=,tag:ey9WUYpcNSzTjFGKwlezow==,type:str]
+kind: ENC[AES256_GCM,data:ay4Ffkbs,iv:weCqHjmQINJugQy+8gMySa11kaONj9ZYftmHCnOfBxU=,tag:DIj4Y4TRfzI/batJzZNBqw==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:3lzA2LnGHQWsRkNwlm0CGNXjbw==,iv:fPeRytdlKStjUsbC/xoRPum2ElIPsjCMhy6JIOWc2ug=,tag:W6UJJRu0/775vXgBc+frdg==,type:str]
-type: ENC[AES256_GCM,data:c+Kpduwp,iv:6Yo0TQ+yvLxgw3r+eRKPzM0tXdQGfQoi/c1rOqVn8Lg=,tag:yV58Axrk5sPMe6TCknN3Tw==,type:str]
+    name: ENC[AES256_GCM,data:YsPCywTdB0FT6ro2OIkR/N2SUA==,iv:Dkhxxnvq18X+wLREzkJUBuuHbcbyiODahZORj54Uh6w=,tag:89TzI6yiu3Ook5u34+y+lw==,type:str]
+    namespace: ENC[AES256_GCM,data:U3IBeQAKEQ==,iv:7PoqAmAyjMJG58VRxo7G0xMcrybbiussD91Z5QCrFSI=,tag:2FTAJtlqe2dCv44a8KQg+Q==,type:str]
+type: ENC[AES256_GCM,data:fdfXWwDX,iv:tn/Utcs2IR63VenUpSNRR3jtJ4XqF4hr6RkRIv8rH/8=,tag:jBJunOUmTyCF/CWTvjm4yA==,type:str]
 data:
-    #ENC[AES256_GCM,data:IwS+kH8d24shv4EVFwtswGvsy1DY9QESdQ==,iv:+D4mnyCo5WTsQ6wgGmydkXsg25N2JiMwMBWQiqxuZzk=,tag:+NNEnhGOTRsUDI/HlgM+Yw==,type:comment]
-    POSTGRES_USER: ENC[AES256_GCM,data:EvEKXiJaD0nG9Sjx,iv:5qBpb8YzEWvUZ9VZbNJaMa4DdlEh++2lZ/yb3B7zMoc=,tag:MXqpeydF9f+X2jFliGk6Pg==,type:str]
-    #ENC[AES256_GCM,data:nfBl1lwkxPvKHvGimL6npGGsnrbCc+Zia9CXmws5tg==,iv:QAFXrXxyvtAn3fBo3DfnbLRg9Tx+uEvFpY47eF0myTI=,tag:D3AdgtZ9u8OOWAPEYMmXNg==,type:comment]
-    POSTGRES_PASSWORD: ENC[AES256_GCM,data:y/LWxL+/eyMhB+r56IwZD9rXIwQ=,iv:rf50xLcwAz/Zt1iEr0R55vYb7U8NZScESKMatWCX8Gs=,tag:gDwlbcRqm7xM+3Dh4Blg8g==,type:str]
-    #ENC[AES256_GCM,data:TNuKxzAfe5wnjWSh8s7U4Avysr0eQbei/NZa,iv:8eu/rcRffHk+s9tmAtgDGMFjHBLhqKGtel/YuKKla2Q=,tag:2Ky8HBtTTGnMWHsRP6VeZg==,type:comment]
-    POSTGRES_DB: ENC[AES256_GCM,data:j8nQrPHoZnjLTTA4zU/x0Q==,iv:BbJUFR91DBnJYbikoIDPEUIZwllTBQQib/cx1pHfvzU=,tag:zTdyCrm/+6UzIKcOu6gthQ==,type:str]
+    #ENC[AES256_GCM,data:UMcm2AqRBQY7Hc/o7r2vRidbswZn1nQdBQ==,iv:W8Pl4miXUw4oh35ukSr0F9Tx/5SpSBNk9Eic8aLD8w8=,tag:CJJBUUlFr/9O2Cy7WOPHbA==,type:comment]
+    POSTGRES_USER: ENC[AES256_GCM,data:+X8WYLrq9698/co/,iv:0LlHeRgmgbstQxtcMXj+iVxYB4cnTH+ItWIJY//qw+4=,tag:MTaRRXiaw+FHXjLl+Oo8Wg==,type:str]
+    #ENC[AES256_GCM,data:rU49HF2FPKl/5cNK2RciV6op+bjHR6HhIpUlf4tB9w==,iv:1U5rkBR+jMjnpjsCJA4eLc0JlXS4fQDrBwtOlGGaa74=,tag:ZqKn85O0EdRjcRNgFM8bzA==,type:comment]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:V4tcoYwRIKI5p0pyoKw1ksLWsxQ=,iv:xr4kMRMESMIPstWiLZra4QNppKER20uPCw8xthVUaNE=,tag:FMTPX2ntB+sXGmys4Am9ew==,type:str]
+    #ENC[AES256_GCM,data:zRLEPs7UeYhDWCRNIgYCk1IXMWRtfwW/bHKH,iv:awiHH6ih9hIId4Snobf56Ppr6/68xRxpNkjpzMyHzW8=,tag:tpGT13+bG9t3kcAERgJ9lw==,type:comment]
+    POSTGRES_DB: ENC[AES256_GCM,data:ZXYyB8LLstYwPgLOltGmKg==,iv:K2HezJyNe/FW8yDPezM2371g13REIKk/Gt84XZshOI4=,tag:WJTTFaPNpw5XtITGocedTA==,type:str]
 sops:
     kms: []
     gcp_kms:
         - resource_id: projects/tough-anagram-448015-h7/locations/global/keyRings/secret_keyring/cryptoKeys/keyring1
-          created_at: "2025-01-22T20:01:52Z"
-          enc: CiQA/v1ObAE+gYpWqLY+wdbWr1zvh9Sxce6cwybj7nwbTLyJ6XQSSQC+rS0DzXnWTe98oztkFLHT+WoHgglyjXdmy+Whl6fJKOv5ss/nqvIzQUKKqbZiWxmgGxB2TVk2E/EZ1ajdKrdsfT4ZcKnIGX0=
+          created_at: "2025-01-22T20:56:16Z"
+          enc: CiQA/v1ObL8ZoA2NyytEIaXK497m0v112ct1KaL9EooYVjyqhqwSSQC+rS0DqMSpfx5MXy2ApWNr1lEsOAfXcK/+uhEp1bhv2vr//nS4XgDrOiuR70hET8e85Kr+XBcYZaOaFz8/Q4XV5w+ht2aQIJk=
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-01-22T20:01:53Z"
-    mac: ENC[AES256_GCM,data:ua9jbMUEAhcB1dJ7U6IbwtsXVZrYSHFmDBoJQbOISbfllQ4kQqhjF5XulNov5DQ74eJFHE/2Fq5kpziVRVsp1ZxrZF76pRawYYo20sZmaYIIxmBVypViKtFuNU3mdaWAdqVJKfB9gbXjvlrJM8k2T/AT0Xas26cFDUw9ElBUCzo=,iv:pj9W+Zj98mjjwxIwGA81m1cDjiiDAmlbUkjzVIT9utU=,tag:+Yj0F6ahr4w93TV/T0UiVw==,type:str]
+    lastmodified: "2025-01-22T20:56:16Z"
+    mac: ENC[AES256_GCM,data:mptwhdEk1XJdk99AnqKHsnCK9jIcQ04yegOdZ+7FQcRCPcjBR8VttTtO1w7/kizXRKbPLMTqh2Twm2mdFBeAcaAGQGiwiUJb+5KCg87DrWtL/LO4YRoYrjo9Zz4MvterpQaIfs2y9kw9VzBN/FUC+3lWSsROgDnakPBS6fE6P/g=,iv:VbCSSyyyuAWE8MXOFsBWf9s/s+xUUcuQpnxHm4l5PK0=,tag:1tVIM4dsYYBQBKxD6sp+Og==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.3
