--- a/part3/todo/manifests/secret.enc.yaml
+++ b/part3/todo/manifests/secret.enc.yaml
@@ -1,27 +1,26 @@
-apiVersion: ENC[AES256_GCM,data:dkM=,iv:gCIJ+1DOz9EIJPP2yTPVFwyhYHLH85J1/hu1eZK6H4U=,tag:ey9WUYpcNSzTjFGKwlezow==,type:str]
-kind: ENC[AES256_GCM,data:ay4Ffkbs,iv:weCqHjmQINJugQy+8gMySa11kaONj9ZYftmHCnOfBxU=,tag:DIj4Y4TRfzI/batJzZNBqw==,type:str]
+apiVersion: ENC[AES256_GCM,data:7so=,iv:eIZ26rsjbrd8zo6FOPaneLqSt78/6eZchhjCv1Z2uq4=,tag:zAhLihdt5rX2iAzgt9rTpA==,type:str]
+kind: ENC[AES256_GCM,data:xllifGtI,iv:MD+v3/b0OvmbdTEeiFzwt7J0qcH9Drvj6U29sWBhF1Y=,tag:2wa2+5Lbzb1UjlyzWbf6Hw==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:YsPCywTdB0FT6ro2OIkR/N2SUA==,iv:Dkhxxnvq18X+wLREzkJUBuuHbcbyiODahZORj54Uh6w=,tag:89TzI6yiu3Ook5u34+y+lw==,type:str]
-    namespace: ENC[AES256_GCM,data:U3IBeQAKEQ==,iv:7PoqAmAyjMJG58VRxo7G0xMcrybbiussD91Z5QCrFSI=,tag:2FTAJtlqe2dCv44a8KQg+Q==,type:str]
-type: ENC[AES256_GCM,data:fdfXWwDX,iv:tn/Utcs2IR63VenUpSNRR3jtJ4XqF4hr6RkRIv8rH/8=,tag:jBJunOUmTyCF/CWTvjm4yA==,type:str]
+    name: ENC[AES256_GCM,data:JSnRdYcCywMVx+yIt7Y5k6HyHg==,iv:2VwsTJOeUrJClN1xMsLzIT3uw8Biy4qKmRNSTG1qgck=,tag:zMRbvhHfpYGW/0kOehVD1g==,type:str]
+type: ENC[AES256_GCM,data:juKCqHW1,iv:xWHhE0Dirwja6GRpw6v2d0jimI/bHBTi3YTwuGMy/58=,tag:9/sFGt+owYa8KXf6Fkw+1A==,type:str]
 data:
-    #ENC[AES256_GCM,data:UMcm2AqRBQY7Hc/o7r2vRidbswZn1nQdBQ==,iv:W8Pl4miXUw4oh35ukSr0F9Tx/5SpSBNk9Eic8aLD8w8=,tag:CJJBUUlFr/9O2Cy7WOPHbA==,type:comment]
-    POSTGRES_USER: ENC[AES256_GCM,data:+X8WYLrq9698/co/,iv:0LlHeRgmgbstQxtcMXj+iVxYB4cnTH+ItWIJY//qw+4=,tag:MTaRRXiaw+FHXjLl+Oo8Wg==,type:str]
-    #ENC[AES256_GCM,data:rU49HF2FPKl/5cNK2RciV6op+bjHR6HhIpUlf4tB9w==,iv:1U5rkBR+jMjnpjsCJA4eLc0JlXS4fQDrBwtOlGGaa74=,tag:ZqKn85O0EdRjcRNgFM8bzA==,type:comment]
-    POSTGRES_PASSWORD: ENC[AES256_GCM,data:V4tcoYwRIKI5p0pyoKw1ksLWsxQ=,iv:xr4kMRMESMIPstWiLZra4QNppKER20uPCw8xthVUaNE=,tag:FMTPX2ntB+sXGmys4Am9ew==,type:str]
-    #ENC[AES256_GCM,data:zRLEPs7UeYhDWCRNIgYCk1IXMWRtfwW/bHKH,iv:awiHH6ih9hIId4Snobf56Ppr6/68xRxpNkjpzMyHzW8=,tag:tpGT13+bG9t3kcAERgJ9lw==,type:comment]
-    POSTGRES_DB: ENC[AES256_GCM,data:ZXYyB8LLstYwPgLOltGmKg==,iv:K2HezJyNe/FW8yDPezM2371g13REIKk/Gt84XZshOI4=,tag:WJTTFaPNpw5XtITGocedTA==,type:str]
+    #ENC[AES256_GCM,data:YXmhKX/2ByzwJ83dsaxbzlHc8h8N0IiVug==,iv:ZPJIiDbx0qHej+GgelQYkbQSsvaZ/GAWJS+sC9e70KU=,tag:Kz9ZFYeZMxt1DQNYDhU7hQ==,type:comment]
+    POSTGRES_USER: ENC[AES256_GCM,data:hugAeXGUZ7EF3gjj,iv:44PSB9GNRiZZFxyNc7kwMelJL0bfrhk6Zb0tWmRjY6s=,tag:3OgYdkAWpAYw1EIhNhxjcQ==,type:str]
+    #ENC[AES256_GCM,data:mZ/IWB6UCAHAB03QKU8Ibigco0rKTOzWFXhPiEWWxQ==,iv:dk7Xlu/ClD3aFVqnOakC7aE7f7Il1zQ6+vKpMYncg2M=,tag:p0MqcRwbrwhiA1gLJXxHqg==,type:comment]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:eRgFcgn71Qolo3DavJFPuNlGY18=,iv:XfU5VPlxZS/6O9NKb4FnafTQwMD4KNcrBSoar1zV4Rg=,tag:NruaWA65yIE5AW3tBK+6PQ==,type:str]
+    #ENC[AES256_GCM,data:jT371M2BdZ9dn+ON7ihb5a+8XZa9+3UGZHJQ,iv:WftwYoO2DFmo7cqCHZfMuM/wDJYH/sLdrnqGbpUUZ94=,tag:v+aVgNfadsV/b31j0BkTaQ==,type:comment]
+    POSTGRES_DB: ENC[AES256_GCM,data:r5apud825MGYQzaWJqc7iA==,iv:xZyQgre5Yi67th7DWLMwSK6AsGxmn1sGcceAkVgZlVQ=,tag:q15qXOW2FFNScNmW50FHvQ==,type:str]
 sops:
     kms: []
     gcp_kms:
         - resource_id: projects/tough-anagram-448015-h7/locations/global/keyRings/secret_keyring/cryptoKeys/keyring1
-          created_at: "2025-01-22T20:56:16Z"
-          enc: CiQA/v1ObL8ZoA2NyytEIaXK497m0v112ct1KaL9EooYVjyqhqwSSQC+rS0DqMSpfx5MXy2ApWNr1lEsOAfXcK/+uhEp1bhv2vr//nS4XgDrOiuR70hET8e85Kr+XBcYZaOaFz8/Q4XV5w+ht2aQIJk=
+          created_at: "2025-01-22T20:57:56Z"
+          enc: CiQA/v1ObGXSlF9J2EUzXIpItLK4FQt5ZOQZYa1jHDv8NJJwqGESSQC+rS0DwHEn4Yt1pUuLS5y3RP00k/upuYRQgHGgsfu1crT+PQsf3s3lY0wcjTh/grQkmPttdyL/f8225BuUUIHy/ww5OdKZNZg=
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-01-22T20:56:16Z"
-    mac: ENC[AES256_GCM,data:mptwhdEk1XJdk99AnqKHsnCK9jIcQ04yegOdZ+7FQcRCPcjBR8VttTtO1w7/kizXRKbPLMTqh2Twm2mdFBeAcaAGQGiwiUJb+5KCg87DrWtL/LO4YRoYrjo9Zz4MvterpQaIfs2y9kw9VzBN/FUC+3lWSsROgDnakPBS6fE6P/g=,iv:VbCSSyyyuAWE8MXOFsBWf9s/s+xUUcuQpnxHm4l5PK0=,tag:1tVIM4dsYYBQBKxD6sp+Og==,type:str]
+    lastmodified: "2025-01-22T20:57:56Z"
+    mac: ENC[AES256_GCM,data:LH6KScOw6SzoJp+n0zmey2++tKu4MUcCA21+gRSovIdyz1jff7RIh3WlOsDeW0Fru466tvhMRmlWleKJgFWqtSzGNvegDYqG1MFOEAhakMb05E9hQuvuB1Zd2AtFcHS9rGHMpOaxGXSvTl9d5LDF+q54iPAeiUGJPffyyG83RaU=,iv:MRYquO88+oHeAOY+YL1j/0ValDxxPbnVGRy6yzNu5so=,tag:dqw9SMA+ui7TVZ/zcJjpNA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.3
